--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 .UserInterfaceState.xcuserstate
+Navigation/Navigation.xcodeproj/project.xcworkspace/xcuserdata/kostya_grishko.xcuserdatad/UserInterfaceState.xcuserstate
